Moved nav bar to index.cshtml and the modified the ui. Fixed the ultra league dropdown menu not aligned

--- a/GoBattleLeagueTeamBuilderProject/GoBattleLeagueTeamBuilder/wwwroot/css/site.css
+++ b/GoBattleLeagueTeamBuilderProject/GoBattleLeagueTeamBuilder/wwwroot/css/site.css
@@ -264,3 +264,7 @@ body {
 .GoBattleLeagueSeasonDetails {
     margin: 20px 0px 30px 0px;
 }
+
+.menu-area li {
+    margin: 0px 2px 0px 2px
+}
